--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "larapack/dd": "^1.1",
         "laravel/framework": "^8.12",
         "laravel/helpers": "^1.4",
         "laravel/passport": "^10.1",
