--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,13 +7,17 @@ pipeline {
                 sh 'composer install'
                 sh 'composer --version'
                 sh 'cp .env.example .env'
+                sh 'php artisan key:generate'
+                sh 'php artisan config:cache'
                 sh 'echo DB_HOST=${DB_HOST} >> .env'
                 sh 'echo DB_USERNAME=${DB_USERNAME} >> .env'
                 sh 'echo DB_DATABASE=${DB_DATABASE} >> .env'
                 sh 'echo DB_PASSWORD=${DB_PASSWORD} >> .env'
-                sh 'php artisan key:generate'
+                sh './vendor/bin/phpunit ./tests'
                 sh 'cp .env .env.testing'
                 sh 'php artisan migrate'
+                
+
             }
         }
         stage("Unit test") {
