--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,43 +1,52 @@
 pipeline {
     agent any
     stages {
-        stage("Build")
+        stage('Build')
             steps {
-                sh 'php --version'
-                sh 'composer install'
-                sh 'composer --version'
-                sh 'cp .env.example .env'
-                sh 'php artisan key:generate'
-                sh 'php artisan config:cache'
-                sh 'echo DB_HOST=${DB_HOST} >> .env'
-                sh 'echo DB_USERNAME=${DB_USERNAME} >> .env'
-                sh 'echo DB_DATABASE=${DB_DATABASE} >> .env'
-                sh 'echo DB_PASSWORD=${DB_PASSWORD} >> .env'
-                sh './vendor/bin/phpunit ./tests'
-                sh 'cp .env .env.testing'
-                sh 'php artisan migrate'
-                
+                sh '''
+                php --version
+               composer install
+                composer --version
+                cp .env.example .env
+                php artisan key:generate
+               php artisan config:cache
+                echo DB_HOST=${DB_HOST} >> .env
+                echo DB_USERNAME=${DB_USERNAME} >> .env
+                echo DB_DATABASE=${DB_DATABASE} >> .env
+               echo DB_PASSWORD=${DB_PASSWORD} >> .env
+                ./vendor/bin/phpunit ./tests
+                cp .env .env.testing
+                php artisan migrate
+                '''
 
             }
         }
-        stage("Unit test") {
+        stage('Unit test') {
             steps {
-                sh 'php artisan test'
+                sh '''
+                php artisan test
+                '''
             }
         }
-        stage("Code coverage") {
+        stage('Code coverage') {
             steps {
-                sh "vendor/bin/phpunit --coverage-html 'reports/coverage'"
+                sh '''
+                vendor/bin/phpunit --coverage-html 'reports/coverage'
+                '''
             }
         }
-        stage("Static code analysis larastan") {
+        stage('Static code analysis larastan') {
             steps {
-                sh "vendor/bin/phpstan analyse --memory-limit=2G"
+                sh '''
+                vendor/bin/phpstan analyse --memory-limit=2G
+                '''
             }
         }
-        stage("Static code analysis phpcs") {
+        stage('Static code analysis phpcs') {
             steps {
-                sh "vendor/bin/phpcs"
+                sh '''
+                vendor/bin/phpcs
+                '''
             }
         }
         
