--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,45 +1,19 @@
 pipeline {
-     agent { docker { image 'php' } }
+    agent any
+
     stages {
-        stage('Build')
+        stage('Test') {
             steps {
-                
-                sh 'php --version'
-              
-               
-            }
-        }
-        stage('Unit test') {
-            steps {
-                
-                sh 'composer --version'
+                sh 'composer install'
+
                 sh 'cp .env.example .env'
+
                 sh 'php artisan key:generate'
+
                 sh 'php artisan config:cache'
-                sh 'vendor/bin/phpunit tests'
+
+                sh './vendor/bin/phpunit ./tests'
             }
         }
-        stage('Code coverage') {
-            steps {
-                
-                echo 'code covered'
-               
-            }
-        }
-        stage('Static code analysis larastan') {
-            steps {
-              
-              sh 'vendor/bin/phpstan analyse --memory-limit=2G'  
-              
-            }
-        }
-        stage('Static code analysis phpcs') {
-            steps {
-               
-                sh 'vendor/bin/phpcs'
-              
-            }
-        }
-        
-      
- }
+    }
+}
