--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
                
                sh 'ls -a'
                
-               echo "I am fine"
+               echo "I am fine too"
                
                sh "docker build . -t jobportalimg:${env.BUILD_ID}"
            }
