--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
                
                sh 'ls -a'
                
-               echo "I am fine tooooo me"
+               echo "I am fine tooooo me ma men"
                
                sh "docker build . -t jobportalimg:${env.BUILD_ID}"
            }
