--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
                
                sh 'ls -a'
                
-               echo "I am fine how about me you"
+               echo "I am fine how about you and me"
                
                sh "docker build . -t jobportalimg:${env.BUILD_ID}"
            }
