--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
                
                sh 'ls -a'
                
-               echo "I am fine how about you me am me "
+               echo "I am fine how about you me  "
                
                sh "docker build . -t jobportalimg:${env.BUILD_ID}"
            }
