--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Test') {
             steps {
-                sh 'composer install'
+                sh 'composer install --ignore-platform-reqs'
 
                 sh 'cp .env.example .env'
 
