--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,6 +15,16 @@ pipeline {
                 sh './vendor/bin/phpunit ./tests'
             }
         }
+       # stage("Unit test") {
+        #    steps {
+         #       sh 'php artisan test'
+          #  }
+        #}
+       # stage("Code coverage") {
+        #    steps {
+         #       sh './vendor/bin/phpunit ./tests'
+          #  }
+        #}
      stage('Build docker image'){
            steps{
                sh 'pwd'
