--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
                
                sh 'ls -a'
                
-               echo "I am fine how about what me you and you me too shenila "
+               echo "I am fine how about what me you and you me too "
                
                sh "docker build . -t jobportalimg:${env.BUILD_ID}"
            }
